dataset1235/2025-2/1379599236/users/2694152216/executions/2110095464_1934415188.log
== RUN (2025-08-31 17:13:32)
-- CODE: 
distancia = float(input("Digite a distancia percorrida (km): "))
combustivel = float(input("Digite o combustivel gasto (litros): "))

consumo_medio = distancia / combustivel

print(round(consumo_medio, 3 km/l))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio, 3 km/l))
                               ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio, 3 km/l))
                               ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio, 3 km/l))
                               ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio, 3 km/l))
                               ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio, 3 km/l))
                               ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio, 3 km/l))
                               ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 17:08:55)
-- CODE: 
# distancia total percorrida
distancia_percorrida = float(input("Distancia percorrida em km: "))
# combustivel gasto
combustivel_gasto = float(input("Combustivel gasto em litros: "))
# consumo medio
consumo_medio = combustivel_gasto / distancia_percorrida

print("{consumo_medio, 3} km/l")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
Distancia percorrida em km: Combustivel gasto em litros: {consumo_medio, 3} km/l
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
---- user output:
Distancia percorrida em km: Combustivel gasto em litros: {consumo_medio, 3} km/l
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
Distancia percorrida em km: Combustivel gasto em litros: {consumo_medio, 3} km/l
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
---- user output:
Distancia percorrida em km: Combustivel gasto em litros: {consumo_medio, 3} km/l
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
Distancia percorrida em km: Combustivel gasto em litros: {consumo_medio, 3} km/l
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
---- user output:
Distancia percorrida em km: Combustivel gasto em litros: {consumo_medio, 3} km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 17:14:24)
-- CODE: 
distancia = float(input("Digite a distancia percorrida (km): "))
combustivel = float(input("Digite o combustivel gasto (litros): "))

consumo_medio = distancia / combustivel

print(round(consumo_medio, 3) "km/l"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio, 3) "km/l"))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio, 3) "km/l"))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio, 3) "km/l"))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio, 3) "km/l"))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio, 3) "km/l"))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio, 3) "km/l"))
                                         ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 17:15:26)
-- CODE: 
distancia = float(input("Digite a distancia percorrida (km): "))
combustivel = float(input("Digite o combustivel gasto (litros): "))

consumo_medio = distancia / combustivel

print(round(consumo_medio, 3), "km/l")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
Digite a distancia percorrida (km): Digite o combustivel gasto (litros): 9.802 km/l
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
---- user output:
Digite a distancia percorrida (km): Digite o combustivel gasto (litros): 2.0 km/l
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
Digite a distancia percorrida (km): Digite o combustivel gasto (litros): 14.286 km/l
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
---- user output:
Digite a distancia percorrida (km): Digite o combustivel gasto (litros): 14.286 km/l
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
Digite a distancia percorrida (km): Digite o combustivel gasto (litros): 18.119 km/l
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
---- user output:
Digite a distancia percorrida (km): Digite o combustivel gasto (litros): 5.0 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 17:15:19)
-- CODE: 
distancia = float(input("Digite a distancia percorrida (km): "))
combustivel = float(input("Digite o combustivel gasto (litros): "))

consumo_medio = distancia / combustivel

print(round(consumo_medio, 3), "km/l")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
Digite a distancia percorrida (km): Digite o combustivel gasto (litros): 9.802 km/l
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
---- user output:
Digite a distancia percorrida (km): Digite o combustivel gasto (litros): 2.0 km/l
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
Digite a distancia percorrida (km): Digite o combustivel gasto (litros): 14.286 km/l
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
---- user output:
Digite a distancia percorrida (km): Digite o combustivel gasto (litros): 14.286 km/l
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
Digite a distancia percorrida (km): Digite o combustivel gasto (litros): 18.119 km/l
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
---- user output:
Digite a distancia percorrida (km): Digite o combustivel gasto (litros): 5.0 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 17:12:50)
-- CODE: 
distancia = float(input("Digite a distancia percorrida (km): "))
combustivel = float(input("Digite o combustivel gasto (litros): "))

consumo_medio = distancia / combustivel

print(round(consumo_medio, 3 km/l"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio, 3 km/l"))
                                     ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio, 3 km/l"))
                                     ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio, 3 km/l"))
                                     ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio, 3 km/l"))
                                     ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio, 3 km/l"))
                                     ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio, 3 km/l"))
                                     ^
SyntaxError: unterminated string literal (detected at line 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 17:11:52)
-- CODE: 
distancia = float(input("Digite a distancia percorrida (km): "))
combustivel = float(input("Digite o combustivel gasto (litros): "))

consumo_medio = distancia / combustivel

print("{consumo_medio:, 3} km/l")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
Digite a distancia percorrida (km): Digite o combustivel gasto (litros): {consumo_medio:, 3} km/l
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
---- user output:
Digite a distancia percorrida (km): Digite o combustivel gasto (litros): {consumo_medio:, 3} km/l
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
Digite a distancia percorrida (km): Digite o combustivel gasto (litros): {consumo_medio:, 3} km/l
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
---- user output:
Digite a distancia percorrida (km): Digite o combustivel gasto (litros): {consumo_medio:, 3} km/l
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
Digite a distancia percorrida (km): Digite o combustivel gasto (litros): {consumo_medio:, 3} km/l
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
---- user output:
Digite a distancia percorrida (km): Digite o combustivel gasto (litros): {consumo_medio:, 3} km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 17:13:10)
-- CODE: 
distancia = float(input("Digite a distancia percorrida (km): "))
combustivel = float(input("Digite o combustivel gasto (litros): "))

consumo_medio = distancia / combustivel

print(round("{consumo_medio, 3} km/l"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("{consumo_medio, 3} km/l"))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("{consumo_medio, 3} km/l"))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("{consumo_medio, 3} km/l"))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("{consumo_medio, 3} km/l"))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("{consumo_medio, 3} km/l"))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("{consumo_medio, 3} km/l"))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 17:12:19)
-- CODE: 
distancia = float(input("Digite a distancia percorrida (km): "))
combustivel = float(input("Digite o combustivel gasto (litros): "))

consumo_medio = distancia / combustivel

print(round("{consumo_medio:, 3} km/l"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("{consumo_medio:, 3} km/l"))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("{consumo_medio:, 3} km/l"))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("{consumo_medio:, 3} km/l"))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("{consumo_medio:, 3} km/l"))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("{consumo_medio:, 3} km/l"))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("{consumo_medio:, 3} km/l"))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
